cmake_minimum_required(VERSION 3.8)
project(calculation_k_r)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rm_interfaces REQUIRED)

#ament_auto_find_build_dependencies()



if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

add_executable(calculation_subscribe src/calculation_subscribe.cpp)
ament_target_dependencies(calculation_subscribe "rclcpp"  "std_msgs" "rm_interfaces")

install(TARGETS
calculation_subscribe
  DESTINATION lib/${PROJECT_NAME}
)

